Make four `Γ`/`H`-derived characters respond to cv

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -393,10 +393,12 @@ tagKind = "letter"
 rank = 1
 description = "H without serifs"
 selector.H = "serifless"
+selector."H/sansSerif" = "serifless"
 selector."H/descenderBase" = "serifless"
 selector.leftHalfH = "serifless"
 selector.rightHalfH = "serifless"
-selector."H/sansSerif" = "serifless"
+selector."grek/Heta" = "serifless"
+selector."grek/heta" = "serifless"
 selector.Hwair = "serifless"
 selector.HHookLeft = "serifless"
 selector."cyrl/Nje/leftHalf" = "serifless"
@@ -406,10 +408,12 @@ selector."cyrl/Nje/leftHalf/reduced" = "serifless"
 rank = 2
 description = "H with serif only at top left"
 selector.H = "topLeftSerifed"
+selector."H/sansSerif" = "serifless"
 selector."H/descenderBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "serifless"
-selector."H/sansSerif" = "serifless"
+selector."grek/Heta" = "topLeftSerifed"
+selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
 selector.HHookLeft = "serifless"
 selector."cyrl/Nje/leftHalf" = "topLeftSerifed"
@@ -419,10 +423,12 @@ selector."cyrl/Nje/leftHalf/reduced" = "topLeftSerifed"
 rank = 3
 description = "H with serif only at top left and bottom right"
 selector.H = "topLeftBottomRightSerifed"
+selector."H/sansSerif" = "serifless"
 selector."H/descenderBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "topLeftBottomRightSerifed"
-selector."H/sansSerif" = "serifless"
+selector."grek/Heta" = "topLeftSerifed"
+selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
 selector.HHookLeft = "topLeftBottomRightSerifed"
 selector."cyrl/Nje/leftHalf" = "topLeftSerifed"
@@ -432,10 +438,12 @@ selector."cyrl/Nje/leftHalf/reduced" = "topLeftSerifed"
 rank = 4
 description = "H with serifs"
 selector.H = "serifed"
+selector."H/sansSerif" = "serifless"
 selector."H/descenderBase" = "serifed"
 selector.leftHalfH = "serifed"
 selector.rightHalfH = "serifed"
-selector."H/sansSerif" = "serifless"
+selector."grek/Heta" = "serifed"
+selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "serifedExceptBottomRight"
 selector.HHookLeft = "serifed"
 selector."cyrl/Nje/leftHalf" = "serifed"
@@ -4710,40 +4718,56 @@ rank = 1
 description = "Standard capital Gamma (`Γ`) without serifs"
 selector."grek/Gamma" = "serifless"
 selector."grek/Gamma/sansSerif" = "serifless"
+selector."grek/Digamma" = "serifless"
+selector."grek/digamma" = "serifless"
 selector."cyrl/Ghe" = "serifless"
-selector."cyrl/Ge" = "serifless"
 selector."cyrl/ghe.upright" = "serifless"
+selector."cyrl/Ge" = "serifless"
 selector."cyrl/ge" = "serifless"
+selector."cyrl/EnGhe/GhePart" = "serifless"
+selector."cyrl/enghe/ghePart" = "serifless"
 
 [prime.capital-gamma.variants.top-right-serifed]
 rank = 2
 description = "Standard capital Gamma (`Γ`) with serifs at top right"
 selector."grek/Gamma" = "topRightSerifed"
 selector."grek/Gamma/sansSerif" = "serifless"
+selector."grek/Digamma" = "topRightSerifed"
+selector."grek/digamma" = "topRightSerifed"
 selector."cyrl/Ghe" = "topRightSerifed"
-selector."cyrl/Ge" = "serifless"
 selector."cyrl/ghe.upright" = "topRightSerifed"
+selector."cyrl/Ge" = "serifless"
 selector."cyrl/ge" = "serifless"
+selector."cyrl/EnGhe/GhePart" = "topRightSerifed"
+selector."cyrl/enghe/ghePart" = "topRightSerifed"
 
 [prime.capital-gamma.variants.bottom-serifed]
 rank = 3
 description = "Standard capital Gamma (`Γ`) with bottom serif"
 selector."grek/Gamma" = "bottomSerifed"
 selector."grek/Gamma/sansSerif" = "serifless"
+selector."grek/Digamma" = "bottomSerifed"
+selector."grek/digamma" = "serifless"
 selector."cyrl/Ghe" = "bottomSerifed"
-selector."cyrl/Ge" = "bottomSerifed"
 selector."cyrl/ghe.upright" = "serifless"
+selector."cyrl/Ge" = "bottomSerifed"
 selector."cyrl/ge" = "serifless"
+selector."cyrl/EnGhe/GhePart" = "serifless"
+selector."cyrl/enghe/ghePart" = "serifless"
 
 [prime.capital-gamma.variants.serifed]
 rank = 4
 description = "Standard capital Gamma (`Γ`) with motion serifs at top and bottom"
 selector."grek/Gamma" = "serifed"
 selector."grek/Gamma/sansSerif" = "serifless"
+selector."grek/Digamma" = "serifed"
+selector."grek/digamma" = "topRightSerifed"
 selector."cyrl/Ghe" = "serifed"
-selector."cyrl/Ge" = "serifed"
 selector."cyrl/ghe.upright" = "serifed"
+selector."cyrl/Ge" = "serifed"
 selector."cyrl/ge" = "serifed"
+selector."cyrl/EnGhe/GhePart" = "topRightSerifed"
+selector."cyrl/enghe/ghePart" = "topRightSerifed"
 
 
 
