--- a/.github/workflows/pr-bump-version.yml
+++ b/.github/workflows/pr-bump-version.yml
@@ -1,6 +1,9 @@
 name: PR Bump Version
 
-on: [pull_request_target]
+on:
+  pull_request_target:
+    types: [opened, edited]
+    branched: [dev]
 
 jobs:
   bump_version_check:
