--- a/.github/workflows/pr-bump-version.yml
+++ b/.github/workflows/pr-bump-version.yml
@@ -2,7 +2,7 @@ name: PR Bump Version
 
 on:
   pull_request_target:
-    types: [opened, edited]
+    types: [opened, edited, reopened]
     branched: [dev]
 
 jobs:
