--- a/.github/workflows/pr-bump-version.yml
+++ b/.github/workflows/pr-bump-version.yml
@@ -3,7 +3,7 @@ name: PR Bump Version
 on:
   pull_request_target:
     types: [opened, edited, reopened]
-    branched: [dev]
+    branches: [dev]
 
 jobs:
   bump_version_check:
