Refine arch height of Cyrillic Capital Shha.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -394,7 +394,7 @@ rank = 1
 description = "H without serifs"
 selector.H = "serifless"
 selector."H/sansSerif" = "serifless"
-selector."H/descenderBase" = "serifless"
+selector."H/descBase" = "serifless"
 selector.leftHalfH = "serifless"
 selector.rightHalfH = "serifless"
 selector."grek/Heta" = "serifless"
@@ -409,7 +409,7 @@ rank = 2
 description = "H with serif only at top left"
 selector.H = "topLeftSerifed"
 selector."H/sansSerif" = "serifless"
-selector."H/descenderBase" = "topLeftSerifed"
+selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "serifless"
 selector."grek/Heta" = "topLeftSerifed"
@@ -424,7 +424,7 @@ rank = 3
 description = "H with serif only at top left and bottom right"
 selector.H = "topLeftBottomRightSerifed"
 selector."H/sansSerif" = "serifless"
-selector."H/descenderBase" = "topLeftSerifed"
+selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "topLeftBottomRightSerifed"
 selector."grek/Heta" = "topLeftSerifed"
@@ -439,7 +439,7 @@ rank = 4
 description = "H with serifs"
 selector.H = "serifed"
 selector."H/sansSerif" = "serifless"
-selector."H/descenderBase" = "serifed"
+selector."H/descBase" = "serifed"
 selector.leftHalfH = "serifed"
 selector.rightHalfH = "serifed"
 selector."grek/Heta" = "serifed"
@@ -5630,7 +5630,7 @@ rank = 1
 keyAffix = ""
 selectorAffix."cyrl/en" = ""
 selectorAffix."cyrl/en.BGR" = ""
-selectorAffix."cyrl/en/descenderBase" = ""
+selectorAffix."cyrl/en/descBase" = ""
 selectorAffix."cyrl/nje/leftHalf" = ""
 selectorAffix."cyrl/nje/leftHalf/reduced" = ""
 selectorAffix."cyrl/njeKomi" = ""
@@ -5640,7 +5640,7 @@ rank = 2
 descriptionAffix = "tail"
 selectorAffix."cyrl/en" = "tailed"
 selectorAffix."cyrl/en.BGR" = "tailed"
-selectorAffix."cyrl/en/descenderBase" = ""
+selectorAffix."cyrl/en/descBase" = ""
 selectorAffix."cyrl/nje/leftHalf" = ""
 selectorAffix."cyrl/nje/leftHalf/reduced" = ""
 selectorAffix."cyrl/njeKomi" = ""
@@ -5651,7 +5651,7 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/en" = "serifless"
 selectorAffix."cyrl/en.BGR" = "serifless"
-selectorAffix."cyrl/en/descenderBase" = "serifless"
+selectorAffix."cyrl/en/descBase" = "serifless"
 selectorAffix."cyrl/nje/leftHalf" = "serifless"
 selectorAffix."cyrl/nje/leftHalf/reduced" = "serifless"
 selectorAffix."cyrl/njeKomi" = "serifless"
@@ -5661,7 +5661,7 @@ rank = 2
 descriptionAffix = "serifs at top left"
 selectorAffix."cyrl/en" = "topLeftSerifed"
 selectorAffix."cyrl/en.BGR" = "topLeftSerifed"
-selectorAffix."cyrl/en/descenderBase" = "topLeftSerifed"
+selectorAffix."cyrl/en/descBase" = "topLeftSerifed"
 selectorAffix."cyrl/nje/leftHalf" = "topLeftSerifed"
 selectorAffix."cyrl/nje/leftHalf/reduced" = "topLeftSerifed"
 selectorAffix."cyrl/njeKomi" = "topLeftSerifed"
@@ -5672,7 +5672,7 @@ disableIf = [{ tail = "tailed" }]
 descriptionAffix = "serifs at top left and bottom right"
 selectorAffix."cyrl/en" = "topLeftBottomRightSerifed"
 selectorAffix."cyrl/en.BGR" = "topLeftBottomRightSerifed"
-selectorAffix."cyrl/en/descenderBase" = "topLeftSerifed"
+selectorAffix."cyrl/en/descBase" = "topLeftSerifed"
 selectorAffix."cyrl/nje/leftHalf" = "topLeftSerifed"
 selectorAffix."cyrl/nje/leftHalf/reduced" = "topLeftSerifed"
 selectorAffix."cyrl/njeKomi" = "topLeftSerifed"
@@ -5682,7 +5682,7 @@ rank = 4
 descriptionAffix = "serifs"
 selectorAffix."cyrl/en" = "serifed"
 selectorAffix."cyrl/en.BGR" = "serifedBGR"
-selectorAffix."cyrl/en/descenderBase" = "serifed"
+selectorAffix."cyrl/en/descBase" = "serifed"
 selectorAffix."cyrl/nje/leftHalf" = "serifed"
 selectorAffix."cyrl/nje/leftHalf/reduced" = "serifedExceptBottomRight"
 selectorAffix."cyrl/njeKomi" = "serifedExceptBottomRight"
