A separate variant selector, `ij-dot`, was added to allow users to configure the shape of the dots in `i` and `j` separately.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6784,9 +6784,27 @@ selector.nine = "straightBar"
 
 
 
+[prime.ij-dot]
+sampler = "ij "
+hotChars = "ij"
+samplerExplain = "Dots in letters “i” and “j” in particular (not including dots in other letters, even if they are similar)"
+tagKind = "dot"
+
+[prime.ij-dot.variants.round]
+rank = 1
+description = "Dots and Commas in i/j are round"
+selector.ijDot = "round"
+
+[prime.ij-dot.variants.square]
+rank = 2
+description = "Dots and Commas in i/j are square"
+selector.ijDot = "square"
+
+
+
 [prime.diacritic-dot]
-sampler = "öẋ ij"
-hotChars = "ijäöü"
+sampler = "öẋ "
+hotChars = "äöü"
 samplerExplain = "Dot and Comma shape in diacritics"
 tagKind = "dot"
 
@@ -7732,6 +7750,7 @@ seven = "straight-serifless"
 eight = "crossing"
 nine = "straight-bar"
 # Dots
+ij-dot = "round"
 punctuation-dot = "round"
 diacritic-dot = "round"
 # Symbols
@@ -8043,6 +8062,7 @@ six = "closed-contour"
 seven = "bend-serifed"
 eight = "two-circles"
 nine = "closed-contour"
+ij-dot = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
@@ -8229,6 +8249,7 @@ four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
+ij-dot = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
@@ -8406,6 +8427,7 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
 nine = "closed-contour"
+ij-dot = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 brace = "straight"
@@ -9017,6 +9039,7 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
 nine = "closed-contour"
+ij-dot = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 paren = "large-contour"
@@ -9426,6 +9449,7 @@ five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "straight-serifed"
 nine = "closed-contour"
+ij-dot = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
