Finish work of #2310 .

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6784,21 +6784,21 @@ selector.nine = "straightBar"
 
 
 
-[prime.ij-dot]
+[prime.tittle]
 sampler = "ij "
 hotChars = "ij"
 samplerExplain = "Dots in letters “i” and “j” in particular (not including dots in other letters, even if they are similar)"
 tagKind = "dot"
 
-[prime.ij-dot.variants.round]
+[prime.tittle.variants.round]
 rank = 1
-description = "Dots and Commas in i/j are round"
-selector.ijDot = "round"
+description = "Dots in i/j are round"
+selector.tittle = "round"
 
-[prime.ij-dot.variants.square]
+[prime.tittle.variants.square]
 rank = 2
-description = "Dots and Commas in i/j are square"
-selector.ijDot = "square"
+description = "Dots in i/j are square"
+selector.tittle = "square"
 
 
 
@@ -7750,7 +7750,7 @@ seven = "straight-serifless"
 eight = "crossing"
 nine = "straight-bar"
 # Dots
-ij-dot = "round"
+tittle = "round"
 punctuation-dot = "round"
 diacritic-dot = "round"
 # Symbols
@@ -8062,7 +8062,7 @@ six = "closed-contour"
 seven = "bend-serifed"
 eight = "two-circles"
 nine = "closed-contour"
-ij-dot = "square"
+tittle = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
@@ -8249,7 +8249,7 @@ four = "closed-serifless"
 six = "closed-contour"
 eight = "two-circles"
 nine = "closed-contour"
-ij-dot = "square"
+tittle = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
@@ -8427,7 +8427,7 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "two-circles"
 nine = "closed-contour"
-ij-dot = "square"
+tittle = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 brace = "straight"
@@ -8811,6 +8811,7 @@ lower-tau = "flat-tailed"
 one = "base-flat-top-serif"
 four = "closed-serifless"
 eight = "two-circles"
+tittle = "square"
 underscore = "low"
 guillemet = "straight"
 dollar = "through-cap"
@@ -9039,7 +9040,7 @@ six = "closed-contour"
 seven = "bend-serifless"
 eight = "crossing-asymmetric"
 nine = "closed-contour"
-ij-dot = "square"
+tittle = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 paren = "large-contour"
@@ -9449,7 +9450,7 @@ five = "oblique-arched-serifless"
 six = "closed-contour"
 seven = "straight-serifed"
 nine = "closed-contour"
-ij-dot = "square"
+tittle = "square"
 punctuation-dot = "square"
 diacritic-dot = "square"
 asterisk = "hex-low"
