Add semi-chancery-serifed variants to `x`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4092,7 +4092,6 @@ selectorAffix."cyrl/rha/right" = "cursive"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-straight]
 rank = 4
-next = "END"
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
 selectorAffix.x = "semiChanceryStraight"
 selectorAffix."x/sansSerif" = "semiChanceryStraight"
@@ -4100,7 +4099,6 @@ selectorAffix."cyrl/rha/right" = "semiChanceryStraight"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-curly]
 rank = 5
-next = "END"
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
 selectorAffix.x = "semiChanceryCurly"
 selectorAffix."x/sansSerif" = "semiChanceryCurly"
@@ -4124,6 +4122,7 @@ selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
 descriptionAffix = "motion serifs"
 selectorAffix.x = "motionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
@@ -5145,15 +5144,15 @@ selectorAffix."grek/chi/sansSerif" = "curly"
 rank = 3
 next = "END"
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
-selectorAffix."grek/chi" = "semiChanceryStraight"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryStraight"
+selectorAffix."grek/chi" = "semiChanceryStraightSerifless"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryStraightSerifless"
 
 [prime.lower-chi.variants-buildup.stages.body.semi-chancery-curly]
 rank = 4
 next = "END"
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
-selectorAffix."grek/chi" = "semiChanceryCurly"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryCurly"
+selectorAffix."grek/chi" = "semiChanceryCurlySerifless"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryCurlySerifless"
 
 [prime.lower-chi.variants-buildup.stages.body.chancery]
 rank = 5
