Add `semi-chancery-{straight|curly}-serifed` variants for `x`. (#2317)
* Add semi-chancery-serifed variants to `x`.

* move `x`.`cursive` to back of list.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4082,37 +4082,35 @@ selectorAffix.x = "curly"
 selectorAffix."x/sansSerif" = "curly"
 selectorAffix."cyrl/rha/right" = "curly"
 
-[prime.x.variants-buildup.stages.body.cursive]
-rank = 3
-next = "END"
-descriptionAffix = "cursive shape"
-selectorAffix.x = "cursive"
-selectorAffix."x/sansSerif" = "cursive"
-selectorAffix."cyrl/rha/right" = "cursive"
-
 [prime.x.variants-buildup.stages.body.semi-chancery-straight]
-rank = 4
-next = "END"
+rank = 3
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
 selectorAffix.x = "semiChanceryStraight"
 selectorAffix."x/sansSerif" = "semiChanceryStraight"
 selectorAffix."cyrl/rha/right" = "semiChanceryStraight"
 
 [prime.x.variants-buildup.stages.body.semi-chancery-curly]
-rank = 5
-next = "END"
+rank = 4
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
 selectorAffix.x = "semiChanceryCurly"
 selectorAffix."x/sansSerif" = "semiChanceryCurly"
 selectorAffix."cyrl/rha/right" = "semiChanceryCurly"
 
 [prime.x.variants-buildup.stages.body.chancery]
-rank = 6
+rank = 5
 next = "END"
 descriptionAffix = "Chancery shape"
 selectorAffix.x = "chancery"
 selectorAffix."x/sansSerif" = "chancery"
 selectorAffix."cyrl/rha/right" = "chancery"
+
+[prime.x.variants-buildup.stages.body.cursive]
+rank = 6
+next = "END"
+descriptionAffix = "cursive shape"
+selectorAffix.x = "cursive"
+selectorAffix."x/sansSerif" = "cursive"
+selectorAffix."cyrl/rha/right" = "cursive"
 
 [prime.x.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4124,6 +4122,7 @@ selectorAffix."cyrl/rha/right" = "serifless"
 
 [prime.x.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
+disableIf = [{body = "semi-chancery-straight"}, {body = "semi-chancery-curly"}]
 descriptionAffix = "motion serifs"
 selectorAffix.x = "motionSerifed"
 selectorAffix."x/sansSerif" = "serifless"
@@ -5145,15 +5144,15 @@ selectorAffix."grek/chi/sansSerif" = "curly"
 rank = 3
 next = "END"
 descriptionAffix = "Semi-chancery shape with straight counter-leg"
-selectorAffix."grek/chi" = "semiChanceryStraight"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryStraight"
+selectorAffix."grek/chi" = "semiChanceryStraightSerifless"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryStraightSerifless"
 
 [prime.lower-chi.variants-buildup.stages.body.semi-chancery-curly]
 rank = 4
 next = "END"
 descriptionAffix = "Semi-chancery shape with curly counter-leg"
-selectorAffix."grek/chi" = "semiChanceryCurly"
-selectorAffix."grek/chi/sansSerif" = "semiChanceryCurly"
+selectorAffix."grek/chi" = "semiChanceryCurlySerifless"
+selectorAffix."grek/chi/sansSerif" = "semiChanceryCurlySerifless"
 
 [prime.lower-chi.variants-buildup.stages.body.chancery]
 rank = 5
