Fix leaning mark anchors for implosive consonants.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2139,8 +2139,8 @@ rank = 1
 descriptionAffix = "double-storey shape"
 selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
+selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
-selectorAffix."gScript/hookTopBase" = ""
 selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single" = ""
 
@@ -2152,8 +2152,8 @@ rank = 1
 keyAffix = ""
 selectorAffix.g = "doubleStorey"
 selectorAffix."g/sansSerif" = "doubleStorey"
+selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
-selectorAffix."gScript/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
 selectorAffix."g/single" = "singleStoreyAutoSerifed"
 
@@ -2162,8 +2162,8 @@ rank = 1
 descriptionAffix = "open contour"
 selectorAffix.g = "openDoubleStorey"
 selectorAffix."g/sansSerif" = "openDoubleStorey"
+selectorAffix."g/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScript" = "singleStoreyScriptCut"
-selectorAffix."gScript/hookTopBase" = "singleStoreySerifless"
 selectorAffix."gScriptCrossedTail" = "singleStoreyScriptCut"
 selectorAffix."g/single" = "singleStoreyAutoSerifed"
 
@@ -2173,8 +2173,8 @@ rank = 2
 descriptionAffix = "single-storey shape"
 selectorAffix.g = "singleStorey"
 selectorAffix."g/sansSerif" = "singleStorey"
+selectorAffix."g/hookTopBase" = "singleStorey"
 selectorAffix."gScript" = "singleStorey"
-selectorAffix."gScript/hookTopBase" = "singleStorey"
 selectorAffix."gScriptCrossedTail" = "singleStorey"
 selectorAffix."g/single" = "singleStorey"
 
@@ -2186,8 +2186,8 @@ rank = 1
 keyAffix = ""
 selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
+selectorAffix."g/hookTopBase" = ""
 selectorAffix."gScript" = ""
-selectorAffix."gScript/hookTopBase" = ""
 selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single" = ""
 
@@ -2196,8 +2196,8 @@ rank = 2
 descriptionAffix = "flat bottom hook"
 selectorAffix.g = "flatHook"
 selectorAffix."g/sansSerif" = "flatHook"
+selectorAffix."g/hookTopBase" = "flatHook"
 selectorAffix."gScript" = "flatHook"
-selectorAffix."gScript/hookTopBase" = "flatHook"
 selectorAffix."gScriptCrossedTail" = ""
 selectorAffix."g/single" = "flatHook"
 
@@ -2205,8 +2205,8 @@ selectorAffix."g/single" = "flatHook"
 rank = 1
 selectorAffix.g = "serifless"
 selectorAffix."g/sansSerif" = "serifless"
+selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScript/hookTopBase" = "serifless"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single" = "serifless"
 
@@ -2215,8 +2215,8 @@ rank = 2
 descriptionAffix = "top-right serif"
 selectorAffix.g = "serifed"
 selectorAffix."g/sansSerif" = "serifless"
+selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScript/hookTopBase" = "serifless"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single" = "serifed"
 
@@ -2225,8 +2225,8 @@ rank = 3
 descriptionAffix = "earless (cornered top-right)"
 selectorAffix.g = "earlessCorner"
 selectorAffix."g/sansSerif" = "earlessCorner"
+selectorAffix."g/hookTopBase" = "earlessCornerHTB"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScript/hookTopBase" = "earlessCornerHTB"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single" = "earlessCorner"
 
@@ -2235,8 +2235,8 @@ rank = 4
 descriptionAffix = "earless (rounded top-right)"
 selectorAffix.g = "earlessRounded"
 selectorAffix."g/sansSerif" = "earlessRounded"
+selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."gScript" = "scriptCut"
-selectorAffix."gScript/hookTopBase" = "serifless"
 selectorAffix."gScriptCrossedTail" = "scriptCut"
 selectorAffix."g/single" = "earlessRounded"
 
@@ -2257,63 +2257,63 @@ next = "serifs"
 rank = 1
 descriptionAffix = "straight terminal"
 selectorAffix.h = "straight"
-selectorAffix."h/descBase" = "straight"
 selectorAffix."h/sansSerif" = "straight"
+selectorAffix."h/descBase" = "straight"
 selectorAffix.hHookTop = "straight"
-selectorAffix.hengHookTop = "straight"
 selectorAffix.heng = "straight"
+selectorAffix.hengHookTop = "straight"
 
 [prime.h.variants-buildup.stages.tail.tailed]
 rank = 2
 descriptionAffix = "curly tailed terminal"
 selectorAffix.h = "tailed"
-selectorAffix."h/descBase" = "straight"
 selectorAffix."h/sansSerif" = "tailed"
+selectorAffix."h/descBase" = "straight"
 selectorAffix.hHookTop = "tailed"
-selectorAffix.hengHookTop = "straight"
 selectorAffix.heng = "straight"
+selectorAffix.hengHookTop = "straight"
 
 [prime.h.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.h = "serifless"
-selectorAffix."h/descBase" = "serifless"
 selectorAffix."h/sansSerif" = "serifless"
+selectorAffix."h/descBase" = "serifless"
 selectorAffix.hHookTop = "serifless"
-selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "serifless"
+selectorAffix.hengHookTop = "serifless"
 
 [prime.h.variants-buildup.stages.serifs.top-left-serifed]
 rank = 2
 disableIf = [{ tail = "NOT straight" }]
 descriptionAffix = "serif at top left"
 selectorAffix.h = "topLeftSerifed"
-selectorAffix."h/descBase" = "topLeftSerifed"
 selectorAffix."h/sansSerif" = "serifless"
+selectorAffix."h/descBase" = "topLeftSerifed"
 selectorAffix.hHookTop = "serifless"
-selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "topLeftSerifed"
+selectorAffix.hengHookTop = "serifless"
 
 [prime.h.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
 descriptionAffix = "serifs at top left and bottom right"
 selectorAffix.h = "motionSerifed"
-selectorAffix."h/descBase" = "topLeftSerifed"
 selectorAffix."h/sansSerif" = "serifless"
+selectorAffix."h/descBase" = "topLeftSerifed"
 selectorAffix.hHookTop = { if = [{ tail = "straight" }], then = "motionSerifed", else = "serifless" }
-selectorAffix.hengHookTop = "serifless"
 selectorAffix.heng = "topLeftSerifed"
+selectorAffix.hengHookTop = "serifless"
 
 [prime.h.variants-buildup.stages.serifs.serifed]
 rank = 4
 descriptionAffix = "serifs"
 selectorAffix.h = "serifed"
-selectorAffix."h/descBase" = "serifed"
 selectorAffix."h/sansSerif" = "serifless"
+selectorAffix."h/descBase" = "serifed"
 selectorAffix.hHookTop = "serifed"
-selectorAffix.hengHookTop = "serifed"
 selectorAffix.heng = "serifed"
+selectorAffix.hengHookTop = "serifed"
 
 
 
