Make Cyrillic Reversed {Tse|Yu} respond to CV.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3058,7 +3058,7 @@ selectorAffix."eng/lTailBase" = ""
 selectorAffix."grek/eta" = ""
 selectorAffix."grek/eta/sansSerif" = ""
 selectorAffix."cyrl/pe.italic" = ""
-selectorAffix."cyrl/peItalicDescBase" = ""
+selectorAffix."cyrl/pe.italic/descBase" = ""
 selectorAffix."cyrl/yat.italic/base/corner" =  ""
 selectorAffix."cyrl/yat.italic/base/cursive" =  ""
 
@@ -3075,7 +3075,7 @@ selectorAffix."eng/lTailBase" = "earlessCorner"
 selectorAffix."grek/eta" = "earlessCorner"
 selectorAffix."grek/eta/sansSerif" = "earlessCorner"
 selectorAffix."cyrl/pe.italic" = ""
-selectorAffix."cyrl/peItalicDescBase" = ""
+selectorAffix."cyrl/pe.italic/descBase" = ""
 selectorAffix."cyrl/yat.italic/base/corner" = ""
 selectorAffix."cyrl/yat.italic/base/cursive" = ""
 
@@ -3092,7 +3092,7 @@ selectorAffix."eng/lTailBase" = "earlessRounded"
 selectorAffix."grek/eta" = "earlessRounded"
 selectorAffix."grek/eta/sansSerif" = "earlessRounded"
 selectorAffix."cyrl/pe.italic" = ""
-selectorAffix."cyrl/peItalicDescBase" = ""
+selectorAffix."cyrl/pe.italic/descBase" = ""
 selectorAffix."cyrl/yat.italic/base/corner" = ""
 selectorAffix."cyrl/yat.italic/base/cursive" = ""
 
@@ -3112,7 +3112,7 @@ selectorAffix."eng/lTailBase" = "straight"
 selectorAffix."grek/eta" = "straight"
 selectorAffix."grek/eta/sansSerif" = "straight"
 selectorAffix."cyrl/pe.italic" = "straight"
-selectorAffix."cyrl/peItalicDescBase" = "straight"
+selectorAffix."cyrl/pe.italic/descBase" = "straight"
 selectorAffix."cyrl/yat.italic/base/corner" = "straight"
 selectorAffix."cyrl/yat.italic/base/cursive" = "straight"
 
@@ -3129,7 +3129,7 @@ selectorAffix."eng/lTailBase" = "straight"
 selectorAffix."grek/eta" = "straight"
 selectorAffix."grek/eta/sansSerif" = "straight"
 selectorAffix."cyrl/pe.italic" = "tailed"
-selectorAffix."cyrl/peItalicDescBase" = "straight"
+selectorAffix."cyrl/pe.italic/descBase" = "straight"
 selectorAffix."cyrl/yat.italic/base/corner" = "straight"
 selectorAffix."cyrl/yat.italic/base/cursive" = "straight"
 
@@ -3147,7 +3147,7 @@ selectorAffix."eng/lTailBase" = "serifless"
 selectorAffix."grek/eta" = "serifless"
 selectorAffix."grek/eta/sansSerif" = "serifless"
 selectorAffix."cyrl/pe.italic" = "serifless"
-selectorAffix."cyrl/peItalicDescBase" = "serifless"
+selectorAffix."cyrl/pe.italic/descBase" = "serifless"
 selectorAffix."cyrl/yat.italic/base/corner" = "serifless"
 selectorAffix."cyrl/yat.italic/base/cursive" = "serifless"
 
@@ -3165,7 +3165,7 @@ selectorAffix."eng/lTailBase" = "topLeftSerifed"
 selectorAffix."grek/eta" = "topLeftSerifed"
 selectorAffix."grek/eta/sansSerif" = "serifless"
 selectorAffix."cyrl/pe.italic" = "topLeftSerifed"
-selectorAffix."cyrl/peItalicDescBase" = "topLeftSerifed"
+selectorAffix."cyrl/pe.italic/descBase" = "topLeftSerifed"
 selectorAffix."cyrl/yat.italic/base/corner" = "topLeftSerifed"
 selectorAffix."cyrl/yat.italic/base/cursive" = "topLeftSerifed"
 
@@ -3183,7 +3183,7 @@ selectorAffix."eng/lTailBase" = { if = [{ body = "eared" }], then = "topLeftSeri
 selectorAffix."grek/eta" = { if = [{ body = "eared" }], then = "topLeftSerifed", else = "serifless" }
 selectorAffix."grek/eta/sansSerif" = "serifless"
 selectorAffix."cyrl/pe.italic" = "motionSerifed"
-selectorAffix."cyrl/peItalicDescBase" = "topLeftSerifed"
+selectorAffix."cyrl/pe.italic/descBase" = "topLeftSerifed"
 selectorAffix."cyrl/yat.italic/base/corner" = "topLeftSerifed"
 selectorAffix."cyrl/yat.italic/base/cursive" = "topLeftSerifed"
 
@@ -3200,7 +3200,7 @@ selectorAffix."eng/lTailBase" = { if = [{ body = "eared" }], then = "topLeftSeri
 selectorAffix."grek/eta" = { if = [{ body = "eared" }], then = "topLeftSerifed", else = "serifless" }
 selectorAffix."grek/eta/sansSerif" = "serifless"
 selectorAffix."cyrl/pe.italic" = "serifed"
-selectorAffix."cyrl/peItalicDescBase" = "serifed"
+selectorAffix."cyrl/pe.italic/descBase" = "serifed"
 selectorAffix."cyrl/yat.italic/base/corner" = "serifedItalicYatCorner"
 selectorAffix."cyrl/yat.italic/base/cursive" = "serifedItalicYatCursive"
 
@@ -3742,6 +3742,7 @@ selectorAffix."cyrl/sha.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
+selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothed"
 
@@ -3763,6 +3764,7 @@ selectorAffix."cyrl/sha.italic" = "tailed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
+selectorAffix."cyrl/tseRev.italic" = "tailed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "tailed"
 
@@ -3784,6 +3786,7 @@ selectorAffix."cyrl/sha.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
+selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothlessCorner"
 
@@ -3805,6 +3808,7 @@ selectorAffix."cyrl/sha.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
+selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothlessRounded"
 
@@ -3827,6 +3831,7 @@ selectorAffix."cyrl/sha.italic" = "serifless"
 selectorAffix."cyrl/shcha.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
+selectorAffix."cyrl/tseRev.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
 selectorAffix."au/u" = "serifless"
 
@@ -3838,17 +3843,18 @@ selectorAffix.u = "bottomRightSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
 selectorAffix.uHookLeft = "bottomRightSerifed"
-selectorAffix.turnh = "bottomRightSerifed"
-selectorAffix.turnhHookLeft = "bottomRightSerifed"
+selectorAffix.turnh = "serifless"
+selectorAffix.turnhHookLeft = "serifless"
 selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "bottomRightSerifed"
-selectorAffix.turnmLeg = "bottomRightSerifed"
+selectorAffix.turnmLeg = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
+selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
 selectorAffix."ue/u" = "serifless"
 selectorAffix."au/u" = "bottomRightSerifed"
 
@@ -3870,6 +3876,7 @@ selectorAffix."cyrl/sha.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
+selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
 selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
@@ -3891,6 +3898,7 @@ selectorAffix."cyrl/sha.italic" = "serifed"
 selectorAffix."cyrl/shcha.italic" = "serifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
+selectorAffix."cyrl/tseRev.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
 selectorAffix."au/u" = "serifed"
 
@@ -6039,14 +6047,20 @@ selector."cyrl/lje"  = "cursive"
 [prime.cyrl-capital-yery.variants.corner]
 rank = 1
 selector."cyrl/Yery" = "corner"
+selector."cyrl/YeryBack" = "corner"
+selector."cyrl/YuRev" = "straight"
 
 [prime.cyrl-capital-yery.variants.round]
 rank = 2
 selector."cyrl/Yery" = "round"
+selector."cyrl/YeryBack" = "round"
+selector."cyrl/YuRev" = "straight"
 
 [prime.cyrl-capital-yery.variants.cursive]
 rank = 3
 selector."cyrl/Yery" = "cursive"
+selector."cyrl/YeryBack" = "cursive"
+selector."cyrl/YuRev" = "straight"
 
 
 
@@ -6059,31 +6073,43 @@ tagKind = "letter"
 rank = 1
 description = "Cyrillic Lower Yery (`ы`) with corner at bottom left"
 selector."cyrl/yery" = "corner"
+selector."cyrl/yeryBack" = "corner"
+selector."cyrl/yuRev" = "straight"
 
 [prime.cyrl-yery.variants.corner-tailed]
 rank = 2
 description = "Cyrillic Lower Yery (`ы`) with corner at bottom left and tail"
 selector."cyrl/yery" = "cornerTailed"
+selector."cyrl/yeryBack" = "cornerTailed"
+selector."cyrl/yuRev" = "tailed"
 
 [prime.cyrl-yery.variants.round]
 rank = 3
 description = "Cyrillic Lower Yery (`ы`) with rounded shape"
 selector."cyrl/yery" = "round"
+selector."cyrl/yeryBack" = "round"
+selector."cyrl/yuRev" = "straight"
 
 [prime.cyrl-yery.variants.round-tailed]
 rank = 4
 description = "Cyrillic Lower Yery (`ы`) with rounded shape and tail"
 selector."cyrl/yery" = "roundTailed"
+selector."cyrl/yeryBack" = "roundTailed"
+selector."cyrl/yuRev" = "tailed"
 
 [prime.cyrl-yery.variants.cursive]
 rank = 5
 description = "Cyrillic Lower Yery (`ы`) with cursive shape"
 selector."cyrl/yery" = "cursive"
+selector."cyrl/yeryBack" = "cursive"
+selector."cyrl/yuRev" = "straight"
 
 [prime.cyrl-yery.variants.cursive-tailed]
 rank = 6
 description = "Cyrillic Lower Yery (`ы`) with cursive shape and tail"
 selector."cyrl/yery" = "cursiveTailed"
+selector."cyrl/yeryBack" = "cursiveTailed"
+selector."cyrl/yuRev" = "tailed"
 
 
 
