Reduce serifed variants of turnm under monospace.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1082,76 +1082,86 @@ next = "serifs"
 rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.U = "toothed"
-selectorAffix."U/noTopLeftSerif" = "toothed"
 selectorAffix."U/sansSerif" = "toothed"
+selectorAffix."AU/Right" = "toothed"
+selectorAffix."AU/Right/reduced" = "toothed"
 
 [prime.capital-u.variants-buildup.stages.body.tailed]
 rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.U = "tailed"
-selectorAffix."U/noTopLeftSerif" = "tailed"
 selectorAffix."U/sansSerif" = "tailed"
+selectorAffix."AU/Right" = "tailed"
+selectorAffix."AU/Right/reduced" = "tailed"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-corner]
 rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.U = "toothlessCorner"
-selectorAffix."U/noTopLeftSerif" = "toothlessCorner"
 selectorAffix."U/sansSerif" = "toothlessCorner"
+selectorAffix."AU/Right" = "toothlessCorner"
+selectorAffix."AU/Right/reduced" = "toothlessCorner"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.U = "toothlessRounded"
-selectorAffix."U/noTopLeftSerif" = "toothlessRounded"
 selectorAffix."U/sansSerif" = "toothlessRounded"
+selectorAffix."AU/Right" = "toothlessRounded"
+selectorAffix."AU/Right/reduced" = "toothlessRounded"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.U = "serifless"
-selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = "serifless"
+selectorAffix."AU/Right/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 2
 disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.U = "bottomRightSerifed"
-selectorAffix."U/noTopLeftSerif" = "bottomRightSerifed"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = "bottomRightSerifed"
+selectorAffix."AU/Right/reduced" = "bottomRightSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
 disableIf = [{ body = "toothless-corner" }, { body = "toothless-rounded" }]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
-selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
+selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
 
 [prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 4
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
-selectorAffix."U/noTopLeftSerif" = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = "serifless"
+selectorAffix."AU/Right/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 5
 disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
-selectorAffix."U/noTopLeftSerif" = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = "bilateralMotionSerifed"
+selectorAffix."AU/Right/reduced" = "bilateralMotionSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
 rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
-selectorAffix."U/noTopLeftSerif" = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
+selectorAffix."AU/Right" = "serifed"
+selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = { if = [{ body = "tailed" }], then = "serifless", else = "bilateralMotionSerifed" } }
 
 
 
@@ -3735,16 +3745,21 @@ selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "toothed"
+selectorAffix."turnm/reduced" = "toothed"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothed"
+selectorAffix."au/u/reduced" = "toothed"
 
 [prime.u.variants-buildup.stages.body.tailed]
 rank = 2
@@ -3757,16 +3772,21 @@ selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "tailed"
+selectorAffix."turnm/reduced" = "tailed"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "tailed"
+selectorAffix."cyrl/sha.italic/reduced" = "tailed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "tailed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "tailed"
+selectorAffix."au/u/reduced" = "tailed"
 
 [prime.u.variants-buildup.stages.body.toothless-corner]
 rank = 3
@@ -3779,16 +3799,21 @@ selectorAffix.turnh = "toothlessCorner"
 selectorAffix.turnhHookLeft = "toothlessCorner"
 selectorAffix.turnhHookLeftRTail = "toothlessCorner"
 selectorAffix.turnm = "toothlessCorner"
+selectorAffix."turnm/reduced" = "toothlessCorner"
 selectorAffix.turnmLeg = "toothlessCorner"
+selectorAffix."turnmLeg/reduced" = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothlessCorner"
+selectorAffix."au/u/reduced" = "toothlessCorner"
 
 [prime.u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
@@ -3801,16 +3826,21 @@ selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
 selectorAffix.turnm = "toothlessRounded"
+selectorAffix."turnm/reduced" = "toothlessRounded"
 selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
 selectorAffix."au/u" = "toothlessRounded"
+selectorAffix."au/u/reduced" = "toothlessRounded"
 
 [prime.u.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -3824,16 +3854,21 @@ selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
 selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "serifless"
+selectorAffix."turnm/reduced" = "serifless"
 selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "serifless"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "serifless"
+selectorAffix."cyrl/sha.italic/reduced" = "serifless"
 selectorAffix."cyrl/shcha.italic" = "serifless"
+selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
 selectorAffix."au/u" = "serifless"
+selectorAffix."au/u/reduced" = "serifless"
 
 [prime.u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 2
@@ -3847,16 +3882,21 @@ selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
 selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "bottomRightSerifed"
+selectorAffix."turnm/reduced" = "bottomRightSerifed"
 selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "bottomRightSerifed"
+selectorAffix."cyrl/sha.italic/reduced" = "bottomRightSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifless"
+selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
 selectorAffix."ue/u" = "serifless"
 selectorAffix."au/u" = "bottomRightSerifed"
+selectorAffix."au/u/reduced" = "bottomRightSerifed"
 
 [prime.u.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
@@ -3869,16 +3909,21 @@ selectorAffix.turnh = "motionSerifed"
 selectorAffix.turnhHookLeft = "bottomRightSerifed"
 selectorAffix.turnhHookLeftRTail = "serifless"
 selectorAffix.turnm = "motionSerifed"
+selectorAffix."turnm/reduced" = "motionSerifed"
 selectorAffix.turnmLeg = "motionSerifed"
+selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
 selectorAffix."cyrl/sha.italic" = "motionSerifed"
+selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "motionSerifed"
+selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
 selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
+selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 [prime.u.variants-buildup.stages.serifs.serifed]
 rank = 4
@@ -3891,16 +3936,21 @@ selectorAffix.turnh = "serifed"
 selectorAffix.turnhHookLeft = "serifed"
 selectorAffix.turnhHookLeftRTail = "serifed"
 selectorAffix.turnm = "serifed"
+selectorAffix."turnm/reduced" = "motionSerifed"
 selectorAffix.turnmLeg = "serifed"
+selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "serifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifed"
 selectorAffix."cyrl/sha.italic" = "serifed"
+selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifed"
+selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."cyrl/tseRev.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
 selectorAffix."au/u" = "serifed"
+selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 
 
