--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3751,9 +3751,9 @@ selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
-selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3778,9 +3778,9 @@ selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "tailed"
-selectorAffix."cyrl/sha.italic/reduced" = "tailed"
+selectorAffix."cyrl/sha/reduced.italic" = "tailed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "tailed"
@@ -3805,9 +3805,9 @@ selectorAffix."turnmLeg/reduced" = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
-selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3832,9 +3832,9 @@ selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
 selectorAffix."cyrl/sha.italic" = "toothed"
-selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/sha/reduced.italic" = "toothed"
 selectorAffix."cyrl/shcha.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3860,9 +3860,9 @@ selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "serifless"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "serifless"
-selectorAffix."cyrl/sha.italic/reduced" = "serifless"
+selectorAffix."cyrl/sha/reduced.italic" = "serifless"
 selectorAffix."cyrl/shcha.italic" = "serifless"
-selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
+selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "serifless"
@@ -3888,9 +3888,9 @@ selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
 selectorAffix."cyrl/sha.italic" = "bottomRightSerifed"
-selectorAffix."cyrl/sha.italic/reduced" = "bottomRightSerifed"
+selectorAffix."cyrl/sha/reduced.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifless"
-selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
+selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
@@ -3915,9 +3915,9 @@ selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
 selectorAffix."cyrl/sha.italic" = "motionSerifed"
-selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
@@ -3942,9 +3942,9 @@ selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "serifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifed"
 selectorAffix."cyrl/sha.italic" = "serifed"
-selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha.italic" = "serifed"
-selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."cyrl/tseRev.italic" = "serifed"
